--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="josesp.splash.com.rsacriptosystem.MainActivity"
-    android:background="@color/color1565c0"
+    android:background="@color/colorBackground"
     >
 
     <Button
         android:id="@+id/btnAuto"
-        android:layout_width="154dp"
-        android:layout_height="47dp"
+        android:layout_width="163dp"
+        android:layout_height="39dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="34dp"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="233dp"
         android:text="@string/rsa"
         android:textColor="@color/colorLight"
         android:textSize="70sp"
@@ -43,10 +43,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="0dp"
         android:text="@string/cryptosystem"
         android:textColor="@color/colorLight"
-        android:textSize="20sp"
+        android:textSize="21sp"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,18 +54,36 @@
 
     <Button
         android:id="@+id/btnManual"
+        android:layout_width="163dp"
+        android:layout_height="39dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="38dp"
+        android:background="@drawable/button_menu"
+        android:onClick="btnManual_onclick"
+        android:text="@string/manual"
         android:textColor="@color/colorLight"
         android:textSize="20sp"
-        android:layout_width="154dp"
-        android:layout_height="47dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="67dp"
-        android:text="@string/manual"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:background="@drawable/button_menu"
+        app:layout_constraintHorizontal_bias="0.503"
+        tools:layout_editor_absoluteY="380dp"
+        tools:layout_editor_absoluteX="115dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="243dp"
+        android:layout_height="209dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icon_rsa_white"
+        app:layout_constraintHorizontal_bias="0.504" />
 
 
 </android.support.constraint.ConstraintLayout>
