interfaz principal terminada

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#1565c0</color>
+    <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#ff4081</color>
     <color name="colorDark">#263238</color>
     <color name="colorWhite">#ffffff</color>
     <color name="blue4">#64b5f6</color>
     <color name="colorBackground">#1565C0</color>
+    <color name="colorTextButton">#42a5f5</color>
 </resources>
