--- a/app/src/main/res/drawable/button_menu.xml
+++ b/app/src/main/res/drawable/button_menu.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true" >
         <shape>
             <corners
-                android:radius="15dp"/>
+                android:radius="3dp"/>
             <solid
                 android:color="@color/colorWhite"
                 />
@@ -15,11 +15,13 @@
         <shape>
             <stroke
                 android:width="2dp"
-                android:color="@color/colorWhite"
+                android:color="@color/colorTextButton"
                 />
             <corners
-                android:radius="15dp"
+                android:radius="10dp"
                 />
+            <solid android:color="@color/colorWhite"/>
+
         </shape>
     </item>
 </selector>
