--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,66 +10,69 @@
 
     <Button
         android:id="@+id/btnAuto"
-        android:layout_width="163dp"
-        android:layout_height="39dp"
+        android:layout_width="200dp"
+        android:layout_height="41dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="34dp"
         android:background="@drawable/button_menu"
         android:text="@string/automatico"
-        android:textColor="@color/colorLight"
+        android:textColor="@color/colorTextButton"
         android:textSize="20sp"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnManual" />
+        app:layout_constraintTop_toBottomOf="@+id/btnManual"
+        tools:layout_editor_absoluteX="54dp"
+        tools:layout_editor_absoluteY="451dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lblRsa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="233dp"
         android:text="@string/rsa"
-        android:textColor="@color/colorLight"
+        android:textColor="@color/colorWhite"
         android:textSize="70sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/lblCrypto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:text="@string/cryptosystem"
-        android:textColor="@color/colorLight"
+        android:textColor="@color/colorWhite"
         android:textSize="21sp"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/lblRsa" />
 
     <Button
         android:id="@+id/btnManual"
-        android:layout_width="163dp"
-        android:layout_height="39dp"
+        android:layout_width="200dp"
+        android:layout_height="41dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="38dp"
         android:background="@drawable/button_menu"
         android:onClick="btnManual_onclick"
         android:text="@string/manual"
-        android:textColor="@color/colorLight"
+        android:textColor="@color/colorTextButton"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.503"
-        tools:layout_editor_absoluteY="380dp"
-        tools:layout_editor_absoluteX="115dp" />
+        app:layout_constraintTop_toBottomOf="@+id/lblCrypto"
+        app:layout_constraintHorizontal_bias="0.502"
+        tools:layout_editor_absoluteY="376dp"
+        tools:layout_editor_absoluteX="62dp" />
 
     <ImageView
         android:id="@+id/imageView"
