--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color1565c0"
+    android:background="@color/colorBackground"
     >
 
     <EditText
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="P"
-        android:textColor="@color/colorLight"
+        android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:layout_constraintRight_toLeftOf="@+id/editText"
         android:layout_marginRight="8dp"
