--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="josesp.splash.com.rsacriptosystem.MainActivity"
-    android:background="@color/colorBackground"
+    android:background="@drawable/fondo2"
     >
 
     <Button
