interfaz manual lista , solo falta mejoras

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,5 +9,8 @@
 
     </style>
 
+    <style name="Hint" parent="TextAppearance.Design.Hint">
+        <item name="android:textColor">@color/colorTextButton</item>
+    </style>
 
 </resources>
