--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -6,37 +6,175 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    >
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
-    <EditText
-        android:id="@+id/editText"
-        style="@style/Widget.AppCompat.AutoCompleteTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="71dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:singleLine="true"
-        android:textAlignment="center"
-        app:layout_constraintHorizontal_bias="0.738"
+    <TextView
+        android:id="@+id/lblDatos"
+        android:layout_width="0dp"
+        android:layout_height="69dp"
+        android:background="@color/colorTextButton"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:text="@string/ingrese_datos"
+        android:textColor="@color/colorWhite"
+        android:textSize="25sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
+
+    <ImageView
+        android:id="@+id/icon1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="P"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText"
-        android:layout_marginRight="8dp"
+        android:scaleX="1.4"
+        android:scaleY="1.4"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        tools:ignore="ContentDescription"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.706"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="80dp" />
+        app:layout_constraintRight_toLeftOf="@+id/textInputLayoutP"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.75"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/lblDatos" />
+
+
+    <ImageView
+        android:id="@+id/icon2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="1.4"
+        android:scaleY="1.4"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        tools:ignore="ContentDescription"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/icon1"
+        android:layout_marginStart="35dp" />
+
+    <ImageView
+        android:id="@+id/icon3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="1.4"
+        android:scaleY="1.4"
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        tools:ignore="ContentDescription"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/icon2"
+        android:layout_marginStart="35dp" />
+
+    <Button
+        android:id="@+id/btnAcept"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="201dp"
+        android:layout_marginEnd="49dp"
+        android:text="@string/aceptar"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/button_manual"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btnCancelar"
+        android:background="@drawable/button_manual"
+        android:textColor="@color/colorWhite"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="201dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/cancelar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.745"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/btnAcept" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutP"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblDatos">
+
+        <EditText
+            android:id="@+id/editP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/P"
+            android:inputType="number"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="158dp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutE"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:layout_marginStart="8dp"
+
+        android:layout_marginTop="14dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:hintAnimationEnabled="true"
+        app:hintTextAppearance="@style/Hint"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/icon3"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutQ">
+
+        <EditText
+            android:id="@+id/editE"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/E"
+            android:inputType="number"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="158dp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayoutQ"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="14dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        app:hintAnimationEnabled="true"
+        app:hintTextAppearance="@style/Hint"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintLeft_toRightOf="@+id/icon2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutP">
+
+        <EditText
+            android:id="@+id/editQ"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/Q"
+            android:inputType="number"
+            android:textSize="16sp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="158dp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+
 </android.support.constraint.ConstraintLayout>
