--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#1565C0</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorAccent">#42a5f5</color>
     <color name="colorDark">#263238</color>
     <color name="colorWhite">#ffffff</color>
     <color name="blue4">#64b5f6</color>
