--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -5,21 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
     <TextView
         android:id="@+id/lblDatos"
         android:layout_width="0dp"
-        android:layout_height="69dp"
-        android:background="@color/colorTextButton"
+        android:layout_height="70dp"
+        android:background="@color/colorBar"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
         android:paddingTop="20dp"
         android:text="@string/ingrese_datos"
         android:textColor="@color/colorWhite"
-        android:textSize="25sp"
+        android:textSize="21sp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -73,20 +72,20 @@
         android:id="@+id/btnAccept"
         android:layout_width="140dp"
         android:layout_height="47dp"
+        android:layout_marginBottom="58dp"
+        android:layout_marginEnd="26dp"
         android:background="@drawable/button_manual"
         android:onClick="btnAccept_onClick"
         android:text="@string/aceptar"
         android:textColor="@color/colorWhite"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="201dp" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btnCancelar"
         android:layout_width="140dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginBottom="58dp"
         android:layout_marginStart="35dp"
         android:background="@drawable/button_manual"
         android:onClick="btnCancel_onClick"
