--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
 
     <Button
         android:id="@+id/btnAuto"
+        android:onClick="btnAutomatic_onclick"
         android:layout_width="200dp"
         android:layout_height="41dp"
         android:layout_marginLeft="8dp"
