--- a/app/src/main/res/layout/activity_text_decrpyted.xml
+++ b/app/src/main/res/layout/activity_text_decrpyted.xml
@@ -6,6 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btnAnotherMessage"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="61dp"
+        android:background="@drawable/button_manual"
+        android:onClick="btnAnotherMessage_onclick"
+        android:text="@string/anotherMessage"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -115,15 +131,17 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btnDescifrar"
+        android:id="@+id/btnExit"
         android:layout_width="140dp"
         android:layout_height="47dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="61dp"
         android:background="@drawable/button_manual"
-        android:text="Salir"
+        android:onClick="btnSalir_onclick"
+        android:text="@string/MENU"
         android:textColor="@color/colorWhite"
+        app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
