--- a/app/src/main/res/layout/activity_text_encrpyted.xml
+++ b/app/src/main/res/layout/activity_text_encrpyted.xml
@@ -6,6 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btnAntoherMessageEncrypt"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="54dp"
+        android:background="@drawable/button_manual"
+        android:onClick="btnAnotherMessageEncrypt_onclick"
+        android:text="@string/anotherMessage"
+        android:textColor="@color/colorWhite"
+        app:layout_constraintHorizontal_bias="0.039"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -121,12 +137,13 @@
         android:layout_height="47dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="54dp"
         android:background="@drawable/button_manual"
         android:text="@string/descifrar"
         android:textColor="@color/colorWhite"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
+        app:layout_constraintHorizontal_bias="0.96" />
 
 </android.support.constraint.ConstraintLayout>
